# GitChameleonBenchmark

./: Dockerfile  Makefile  README.md  parallel_eval_jsonl.py  pyproject.toml
.github/workflows/: ci.yaml
dataset/: dataset.jsonl  ground_truth_solutions.jsonl
dataset/hidden_tests/: test_sample_0.py  test_sample_1.py  test_sample_10.py  test_sample_100.py  test_sample_101.py  test_sample_102.py  test_sample_103.py  test_sample_104.py  test_sample_105.py  test_sample_106.py  test_sample_107.py  test_sample_108.py  test_sample_109.py  test_sample_11.py  test_sample_110.py  test_sample_111.py  test_sample_112.py  test_sample_113.py  test_sample_114.py  test_sample_115.py  test_sample_116.py  test_sample_117.py  test_sample_118.py  test_sample_119.py  test_sample_12.py  test_sample_120.py  test_sample_121.py  test_sample_122.py  test_sample_123.py  test_sample_124.py  test_sample_125.py  test_sample_126.py  test_sample_127.py  test_sample_128.py  test_sample_129.py  test_sample_13.py  test_sample_130.py  test_sample_131.py  test_sample_132.py  test_sample_133.py  (+289 more)
dataset/solutions/: sample_0.py  sample_1.py  sample_10.py  sample_100.py  sample_101.py  sample_102.py  sample_103.py  sample_104.py  sample_105.py  sample_106.py  sample_107.py  sample_108.py  sample_109.py  sample_11.py  sample_110.py  sample_111.py  sample_112.py  sample_113.py  sample_114.py  (+310 more)
gitchameleon/: check_persisted.py  constants.py  create_venvs.py  data_model.py  dataset_checker.py  eval_sample.py  eval_wrapper.py  instrument.py  parallel_eval_jsonl.py  run_eval.py  utils.py
src/: eval_sample.py
(+328 files in other folders)
