[tool.poetry]
name = "gitchameleon"
version = "1.0.0"
description = ""
authors = ["Diganta Misra", "Nizar Islah", "Victor May"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
tqdm = "^4.67.1"
pydantic = "^2.11.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pyright = "^1.1.396"

[tool.ruff]
line-length = 120
exclude = ["dataset"]

[tool.pyright]
exclude = ["dataset", ".dataset_venvs", ".venv"]

[tool.poetry.scripts]
evaluate = "gitchameleon.eval_wrapper:main"